@@ -7,7 +7,7 @@ Elrond elrond+openstreetmap.org@samba-tng.org
 Oliver Heesakkers
 Patric Cameron
 Geoff Richards
-
+Raphael Studer
 
 Merkaartor uses icons from the Tango Desktop Project 
 (http://tango-freedesktop.org/)
